# django-notifications-community-sites

./: .gitignore  .pre-commit-config.yaml  AUTHORS.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  manage.py  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: auto-assign.yml  release.yml  test.yml
notifications_sites/: admin.py  apps.py  checks.py  handlers.py  hooks.py  models.py
notifications_sites/management/commands/: copy_legacy_notifications.py
notifications_sites/migrations/: 0001_initial.py  0002_alter_notification_id.py
notifications_sites/tests/: settings.py  tests.py  urls.py
notifications_sites/tests/test_models/: models.py
